# bud-serve-app

./: .commitlintrc.yaml  .dockerignore  .env.sample  .flake8  .gitignore  .pre-commit-config.yaml  CLAUDE.md  README.md  c2p.sh  cluster_metrics.json  metrics.json  node_metrics.json  output.txt  pyproject.toml  requirements-dev.txt  requirements-lint.txt  requirements-test.txt  requirements.txt  setup.py  startup.sh
.claude/commands/: issues-from-linear.md  issues.md  review.md  work.md
.dapr/: appconfig-dev.yaml
.dapr/components/: binding.yaml  configstore.yaml  pubsub-redis.yaml  secretstore-env.yaml  statestore.yaml  subscriptions.yaml
.github/workflows/: nightly-image.yml  pr-review.yml  release-image.yml
budapp/: __about__.py  __init__.py  alembic.ini  main.py
budapp/auth/: __inti__.py  auth_routes.py  crud.py  models.py  schemas.py  services.py  token.py
budapp/benchmark_ops/: benchmark_routes.py  models.py  schemas.py  services.py
budapp/cluster_ops/: __init__.py  cluster_routes.py  crud.py  models.py  scheduler.py  schemas.py  services.py  utils.py  workflows.py
budapp/commons/: __init__.py  api_utils.py  async_utils.py  config.py  constants.py  database.py  db_utils.py  dependencies.py  exceptions.py  grafana.py  helpers.py  keycloak.py  logging.py  notification_utils.py  permission_handler.py  resiliency.py  schemas.py  security.py  types.py  validators.py
budapp/core/: __init__.py  common_routes.py  crud.py  meta_routes.py  models.py  notify_routes.py  schemas.py  services.py
budapp/credential_ops/: __init__.py  credential_routes.py  crud.py  helpers.py  models.py  schemas.py  services.py
budapp/dataset_ops/: dataset_routes.py  models.py  schemas.py  services.py  utils.py
budapp/endpoint_ops/: __init__.py  crud.py  endpoint_routes.py  models.py  schemas.py  services.py
budapp/eval_ops/: LOCAL_MODE_README.md  __init__.py  eval_routes.py  manifest_schemas.py  models.py  schemas.py  services.py  sync_service.py  workflows.py
budapp/initializers/: __init__.py  base_seeder.py  (+14 more)
deploy/: Dockerfile  docker-compose-dev.yaml  docker-compose-keyclock.yaml  docker-compose-postgres.yaml  docker-compose-redis.yaml  start_dev.sh  stop_dev.sh
docs/: EMBEDDING_DEPLOYMENT_FEATURE.md  add_model_workflows.md  keycloak-integration.md  performance_benchmark_workflow.md  prometheus-grafana-monitoring.md  workflow.md
scripts/: del_configs.sh  install_hooks.sh  update_configs.sh
tests/: conftest.py  test_cloud_model_delete.py  test_cluster_metrics.py  test_cluster_metrics_fetcher.py  test_cluster_node_metrics.py  test_deployment_settings.py  test_deployment_settings_feedback_removal.py  test_deployment_settings_integration.py  test_model_deployment.py  test_node_metrics.py  test_pubsub.py  test_redis.py  test_update_credential.py
vr/: about.md  outputs.txt
(+200 files in other folders)
